force-app/main/default/objects/Sync_Master__c/Sync_Master__c.object-meta.xml
<CustomObject>
    <label>inwise Sync Process</label>
    <nameField>
        <displayFormat>ISM-{0000}</displayFormat>
        <label>inwise Sync Master No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inwise Sync Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>