force-app/main/default/objects/Sync_Master__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <label>Group Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>