force-app/main/default/objects/Sync_Master__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <formula>IF(Can_ReSync__c, IF(Total_Memerbs_Count__c ==  Processed_Members__c, &apos;Completed&apos;,&apos;Failed&apos;),&apos;Completed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync Status</label>
    <type>Text</type>
</CustomField>