force-app/main/default/objects/Sync_Master__c/fields/Total_Memerbs_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Memerbs_Count__c</fullName>
    <label>Total Memerbs Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>