force-app/main/default/objects/Sync_Master__c/fields/Track_Members_When_Sync_Started__c.field-meta.xml
<CustomField>
    <fullName>Track_Members_When_Sync_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Members (When Sync Started)</label>
    <type>Checkbox</type>
</CustomField>