force-app/main/default/objects/Sync_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Total_Memerbs_Count__c</columns>
    <columns>Processed_Members__c</columns>
    <columns>Sync__c</columns>
    <columns>Campaign__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Group_Id__c</columns>
    <columns>Sync_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>